INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${VLE_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${VLE_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_LIBRARY(Beep MODULE Beep.cpp)
TARGET_LINK_LIBRARIES(Beep ${VLE_LIBRARIES})
INSTALL(TARGETS Beep
  RUNTIME DESTINATION plugins/simulator
  LIBRARY DESTINATION plugins/simulator)